2010-05-16  Sebastien Pouliot  <sebastien@ximian.com>

	* AssemblyRocks.cs:
	* CecilRocks.cs:
	* CommonRocks.cs:
	* CustomAttributeRocks.cs:
	* FieldRocks.cs:
	* InstructionRocks.cs:
	* MethodRocks.cs:
	* ModuleRocks.cs:
	* TypeRocks.cs:
	* VariableDefinitionRocks.cs:
		Apply fix for CheckParametersNullityInVisibleMethodsRule

2010-05-10  Sebastien Pouliot  <sebastien@ximian.com>

	* MethodRocks.cs (IsMain): Apply AvoidRepetitiveCallsToPropertiesRule
	on MethodDefinition.Parameters property.
	* TypeRocks.cs: Apply CheckParametersNullityInVisibleMethodsRule 
	on several rocks.  Apply AvoidRepetitiveCallsToPropertiesRule
	on MethodDefinition.Parameters on both GetMethod and IsFloatingPoint
	rocks

2010-05-02  Sebastien Pouliot  <sebastien@ximian.com>

	* CecilRocks.cs: Add IMetadataTokenProvider.Equals(IMetadataToken
	Provider) rock
	* InstructionRocks.cs: Apply AvoidUnnecessarySpecializationRule
	on some methods (where it's not confusing)
	* VariableDefinitionRocks.cs: Apply AvoidUnnecessarySpecialization
	Rule

2010-05-01  Sebastien Pouliot  <sebastien@ximian.com>

	* InstructionRocks.cs: Add a new Is(Code) rock to enhance rule
	readability.

2010-04-28  Sebastien Pouliot  <sebastien@ximian.com>

	* InstructionRocks.cs: Stop a backward trace if we encounter an
	instruction doing an unconditional branch

2010-01-01  Sebastien Pouliot  <sebastien@ximian.com>

	* ParameterRocks.cs: New. IsRef and IsParams rocks to use like
	IsOut property.

2009-12-10  Sebastien Pouliot  <sebastien@ximian.com>

	* ModuleRocks.cs: Ignore InvalidOperationException (used by the 
	new PdbCCiReader implementation) if the PDB is does not match 
	the assembly (DLL/EXE)

2009-06-10  Jesse Jones  <jesjones@mindspring.com>

	* TypeRocks.cs: Added AllSuperTypes rock.

2009-04-30  Jesse Jones  <jesjones@mindspring.com>

	* VariableDefinitionRocks.cs: Added IsGeneratedName rock.

2009-01-28  Jb Evain  <jbevain@novell.com>

	* TypeRocks.cs: Resolve: remove. Implements: handle types