@@ -1,3 +1,10 @@
+2010-06-05  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* CecilRock.cs: Add a faster path (without multiple casting) for
+	GetAssembly, fallback to existing (slow) code path if needed.
+	Support all IMetadataTokenProvider types. Make Equals namespace
+	aware and better deal with null assemblies.
+
 2010-05-16  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* AssemblyRocks.cs:
